Refatorar para suportar múltiplos arquivos na configuração
Atualizamos as classes de domínio, entidade e mapeamento para permitir que `ConfiguracaoEscolhaVendedor` referencie vários vendedores em vez de um único. Ajustamos a lógica relacionada em `VendedorUseCase` e ​​atualizamos os mapeamentos JPA para usar um relacionamento `@ManyToMany`. Também adicionamos nomes de coluna explícitos para IDs de entidade.